--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@stripe/stripe-js": "^5.5.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.64.2",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.1",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
