--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["es6", "dom"],
     "allowJs": true,
     "outDir": "dist",
-    "rootDir": "..",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -16,5 +16,5 @@
     "isolatedModules": true
   },
   "include": ["./**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
